# hw3-michaelmiao5258-boop

./: .gitignore  Makefile  README.md  ai_documentation.txt  config.json  index.html  index.json  losc-event-tutorial.json  myst.search.json  myst.xref.json  myst.yml  objects.inv  pyproject.toml
.github/workflows/: myst-pages.yml
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
losc-event-tutorial/: index.html
