[build-system]
requires = ["setuptools>=68", "wheel", "numpy>=1.22"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
version = "0.1.0"
description = "Utilities for the LIGO event tutorial (STAT159 HW3)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [{ name = "LSC and Lin Da Miao" }]

dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "matplotlib",
  "pytest"
]

[tool.setuptools]
packages = ["ligotools"]
